Fix filter buttons spacing [SCI-8223]

--- a/app/assets/stylesheets/shared/filter_dropdown.scss
+++ b/app/assets/stylesheets/shared/filter_dropdown.scss
@@ -94,6 +94,10 @@
       padding: 0 1em;
       position: relative;
       width: 100%;
+
+      .clear-button {
+        margin-right: 0.375rem;
+      }
     }
   }
 
